# srs-model

./: .env  .gitignore  Dockerfile  app.py  docker-compose.yml  model.py  model_updater.py  pyproject.toml  rules.pkl
.github/workflows/: docker-publish.yml
