[project]
name = "srs-model"
version = "0.1.0"
description = "FIM model for songs recomendation"
authors = [
    {name = "agvicente@ufmg.br"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9.21"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "mlxtend (>=0.23.3,<0.24.0)",
    "flask (>=3.1.0,<4.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
